package model;

public interface ICar {
    String getName();
    String getCategory();
    String getHierarchy();
    int getGas();
}
